# auto_tm1

./: .gitignore  .mcp.json  .mcp.json.macos.example  CLAUDE.md  bash.exe.stackdump  pyproject.toml
.claude/: settings.json  settings.json.macos.example  settings.local.json
.claude/agent-memory/tm1-explorer/: 24retail-overview.md  MEMORY.md  (+1 more)
.claude/agents/: ti-code-reviewer.md  tm1-explorer.md
config/: tm1py_config.example.ini
docs/ideas/: tm1-model-builder.md  新开发计划.txt
docs/specs/: tm1-model-builder-plan.md  tm1-model-builder-spec.md
hooks/: cc_workon.py  session_cleanup.py  session_store.py  spec_gate.py  spec_review_gate.py
models/APQ_Logging/: _generate_specs.py  }APQ_Cube_Last_Updated_Measure_dimension-spec.json  }APQ_Cubes_dimension-spec.json  }APQ_Parallelization_Control_Measure_dimension-spec.json  }APQ_Process_Execution_Log_Measure_dimension-spec.json  }APQ_Processes_dimension-spec.json  }APQ_Time_Day_dimension-spec.json  }APQ_Time_Minute_dimension-spec.json
models/Financial_Reporting/: Account_dimension-spec.json  Finance_Report_cube-spec.json  Version_dimension-spec.json
models/Sales_Forecast/: Month_dimension-spec.json  Product_dimension-spec.json  Region_dimension-spec.json  Sales_Forecast_cube-spec.json
tests/: conftest.py  test_cc_workon.py  test_cube_write.py  test_data_write.py  test_dimension_file.py  test_dimension_write.py  test_mcp_readonly.py  test_mcp_write.py  test_process_params_keys.py  test_subset_write.py  test_verify.py  test_view_write.py  新建 文本文档.csv
tm1_mcp_server/: tm1_connector.py  tm1_mcp_tool.py
(+15 files in other folders)
