[project]
name = "auto-tm1"
version = "0.1.0"
description = "auto-tm1 with claude code python env"
readme = "README"
requires-python = "==3.13.9"
dependencies = [
     "tm1py>=2.2.5",
     "fastmcp==3.2.0",
     "pandas>=3.0.3",
     "loguru>=0.7.3",
     "pytest>=9.0.3",
     "python-dotenv>=1.2.2",
     "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
